--- a/Infrastructure-Automation/ansible/inventory/inventory.yml
+++ b/Infrastructure-Automation/ansible/inventory/inventory.yml
@@ -1,9 +1,9 @@
 [front]
 172.17.0.2 ansible_ssh_private_key_file=/root/Infrastructure-Automation/terraform/keys/id_rsa_terraform
-172.19.0.4 ansible_ssh_private_key_file=/root/Infrastructure-Automation/terraform/keys/id_rsa_terraform
-
-[back]
 172.19.0.3 ansible_ssh_private_key_file=/root/Infrastructure-Automation/terraform/keys/id_rsa_terraform
 
+[back]
+172.19.0.4 ansible_ssh_private_key_file=/root/Infrastructure-Automation/terraform/keys/id_rsa_terraform ansible_user=root
+
 [db]
-172.19.0.2 ansible_ssh_private_key_file=/root/Infrastructure-Automation/terraform/keys/id_rsa_terraform
+172.19.0.2 ansible_ssh_private_key_file=/root/Infrastructure-Automation/terraform/keys/id_rsa_terraform 
