--- a/Infrastructure-Automation/ansible/playbook.yml
+++ b/Infrastructure-Automation/ansible/playbook.yml
@@ -4,3 +4,22 @@
   become: yes
   roles:
     - common
+  tags: common  # Тег для роли common
+
+- name: Configure back host
+  hosts: back
+  become: yes
+  vars:
+    php_version: "7.4"  # Указываем нужную версию PHP
+  roles:
+    - back
+  tags: back  # Тег для роли back
+
+- name: Configure MariaDB  
+  hosts: db  
+  become: yes
+  vars_files:
+    - vault/secrets.yml  # Подключаем файл с секретами
+  roles:
+    - db  
+  tags: db  # Тег для роли db 
