--- a/Infrastructure-Automation/ansible/roles/common/tasks/main.yml
+++ b/Infrastructure-Automation/ansible/roles/common/tasks/main.yml
@@ -1,29 +1,70 @@
+
 ---
-- name: Install common packages # Устанавливаем общие пакеты 
-  apt:
-    name: "{{ item }}"  # Устанавливаемый пакет
-    state: present      # Убедиться, что пакет установлен
-    update_cache: yes   # Обновить кеш пакетов перед установкой
-  loop:
-    - apt-utils        # Утилиты для работы с пакетами для Ubuntu
-    - chrony           # Пакет для синхронизации времени
-#   - yum-utils        # Утилиты для работы с пакетами (на CentOS/RHEL)
-    - apt-utils        # Утилиты для работы с пакетами для Ubuntu 
-    - mc               # Файловый менеджер Midnight Commander
-    - curl             # Утилита для работы с HTTP-запросами
-    - htop             # Мониторинг ресурсов системы
-    - atop             # Расширенный мониторинг системы
+- name: Собрать факты Ansible
+  setup:
+  tags: gather_facts
 
-- name: Remove unwanted packages # Удаляем ненужные пакеты 
-  apt:
-    name: "{{ item }}"  # Пакет для удаления
-    state: absent       # Убедиться, что пакет удален
-  loop:
-    - apparmor         # Система безопасности (если используется на Debian/Ubuntu)
-    - cockpit          # Веб-интерфейс для управления сервером
+- name: Kill any running apt or dpkg processes
+  shell: |
+    pkill -f apt-get || true
+    pkill -f apt || true
+    pkill -f dpkg || true
+  ignore_errors: yes
+  tags: kill_apt_processes
 
-- name: Ensure chrony is running and enabled # Проверяем, что chrony запущен и включен
+- name: Очистить кеш apt и обновить список пакетов
+  apt:
+    update_cache: yes
+    cache_valid_time: 3600
+  tags: update_apt_cache
+
+- name: Install common packages
+  apt:
+    name: "{{ item }}"
+    state: present
+    update_cache: yes
+  loop:
+    - apt-utils
+    - chrony
+    - mc
+    - curl
+    - htop
+    - atop
+    - language-pack-ru
+    - locales
+    - mariadb-client  # Установка клиента MariaDB 
+  tags: install_common_packages
+
+- name: Remove unwanted packages
+  apt:
+    name: "{{ item }}"
+    state: absent
+  loop:
+    - apparmor
+    - cockpit
+  tags: remove_unwanted_packages
+
+- name: Ensure chrony is running and enabled
   service:
-    name: chrony       # Название службы
-    state: started     # Убедиться, что служба запущена
-    enabled: yes       # Убедиться, что служба включена для автозапуска
+    name: chrony
+    state: started
+    enabled: yes
+  tags: configure_chrony
+
+- name: Установить русскую локаль
+  locale_gen:
+    name: "ru_RU.UTF-8"
+    state: present
+  tags: set_locale
+
+- name: Настроить локаль по умолчанию
+  command: update-locale LANG=ru_RU.UTF-8
+#  when: ansible_os_family == "Debian"
+  tags: configure_locale
+
+- name: Добавить пользователя ansible в группу root
+  user:
+    name: ansible
+    groups: root
+    append: yes
+  tags: root
